# rust-with-strimzi-kafka-and-tls

./: .gitignore  Cargo.toml  README.md
examples/: run-consumer.rs  run-producer.rs
kubernetes/: deploy.sh  dev.yaml  tls-kafka-cluster-0-server.yaml  topics.yaml
kubernetes/strimzi-kafka-operator/: README.md
kubernetes/tls/: ca-key.pem  ca.pem  client-key.pem  client.pem  server-cert-chain.pem  server-key.pem  server.pem
src/: consume_and_print.rs  consumer.rs  custom_context.rs  example_utils.rs  lib.rs  log_utils.rs  producer.rs  publish_messages.rs
